@@ -14,7 +14,14 @@ public class OsHelper {
 
     public static Path getUserDocumentsPath() {
         if (SystemUtils.IS_OS_WINDOWS) {
-            return Path.of(FileSystemView.getFileSystemView().getDefaultDirectory().getPath());
+            var dir = FileSystemView.getFileSystemView().getDefaultDirectory();
+
+            // Sometimes this is null. Why?
+            if (dir == null) {
+                return Paths.get(System.getProperty("user.home"));
+            }
+
+            return dir.toPath();
         } else {
             return Paths.get(System.getProperty("user.home"), ".local", "share");
         }
